# discord-bot

./: .env.example  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  application.py  config.json  docker-compose.yml  dockerfile  faq.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: build-and-push-image.yml  dev-deploy.yml  prod-deploy.yml  source.yml
ISSUE_TEMPLATE/: bug_report.yaml
cogs/events/: general.py
cogs/interactions/slash/: anon.py  help.py  link.py  mod.py  utils.py
docs/: README.md
src/: application.py  bot.py  config.json  faq.json  requirements.txt
src/cogs/events/: events.py  general.py
src/cogs/interactions/: verification.py
src/cogs/interactions/slash/: anon.py  dev.py  help.py  link.py  mod.py  mongo.py  utils.py  verification.py
src/utils/: general.py
utils/: config.py  general.py
